--- a/src/OurTime.WebUI/Views/Home/Watches.cshtml
+++ b/src/OurTime.WebUI/Views/Home/Watches.cshtml
@@ -63,8 +63,7 @@
             </a>
             <p>Price: 39,999 SEK</p>
             <div class="button-group">
-                <button class="toggle-info"
-                        onclick="toggleInfo('trek-info')">
+                <button class="toggle-info" onclick="toggleInfo('trek-info')">
                     More information
                 </button>
                 <button type="button"
