--- a/src/OurTime.WebUI/Views/Home/Index.cshtml
+++ b/src/OurTime.WebUI/Views/Home/Index.cshtml
@@ -22,8 +22,16 @@
             </a>
             <p>Price: 89,999 SEK</p>
 
-            <button class="toggle-info" onclick="toggleInfo('vector-info')">More information</button>
-            <button>Buy now</button>
+            <div class="button-group">
+                <button class="toggle-info" onclick="toggleInfo('vector-info')">
+                    More information
+                </button>
+                <button type="button"
+                        class="buy-now-button"
+                        onclick="addToCart('Vector')">
+                    Buy now
+                </button>
+            </div>
 
             <!-- Dold beskrivning (visas med animation) -->
             <div id="vector-info" class="product-info" style="max-height: 0; overflow: hidden; transition: max-height 0.4s ease;">
@@ -40,3 +48,7 @@
         </article>
     </section>
 </main>
+
+@section Scripts {
+    <script src="~/js/cart.js" defer asp-append-version="true"></script>
+}
