--- a/src/OurTime.WebUI/wwwroot/css/site.css
+++ b/src/OurTime.WebUI/wwwroot/css/site.css
@@ -41,7 +41,7 @@ h1, h2, h3, h4, h5, h6 {
     color: #111111;
 }
 
-    /* Specifik styling för paragrafer (brödtext) inom .section-content */
+    /* Specifik styling för paragrafer inom .section-content */
     .section-content p {
         font-size: 24px;
         line-height: 1.8;
@@ -49,7 +49,7 @@ h1, h2, h3, h4, h5, h6 {
         text-align: center;
     }
 
-/* Gemensam styling för navigation */
+/* Navigationsmeny */
 nav ul {
     list-style: none;
     padding: 0;
@@ -95,7 +95,7 @@ footer {
     width: 100%;
 }
 
-/* Styling för kontaktinformationen (textstorlek och centrering) */
+/* Kontaktinformation */
 .contact-info {
     list-style: none;
     padding: 0;
@@ -119,7 +119,7 @@ footer {
             color: #A61B1B;
         }
 
-/* Styling för produktinformation (ut- och infällbar text) */
+/* Ut-/infällbar produktinfo */
 .product-info {
     max-height: 0;
     overflow: hidden;
@@ -133,7 +133,7 @@ footer {
         color: #111111;
     }
 
-/* Specifik styling för knappen "More information" */
+/* Specifik styling för toggle-info-knappen */
 button.toggle-info {
     background-color: #C62828;
     color: white;
