SCRUM-64-fixat knappar, ändrat text på header

--- a/src/OurTime.WebUI/Views/Account/Login.cshtml
+++ b/src/OurTime.WebUI/Views/Account/Login.cshtml
@@ -23,7 +23,8 @@
                 </div>
                 
                 <!-- Submit button -->
-                <button type="submit" class="btn btn-dark text-danger w-100">Log in</button>
+                <button type="submit" class="btn btn-success w-100">Log in</button>
+
             </form>
             
             <!-- Error message for invalid login -->
