--- a/src/OurTime.WebUI/Views/Shared/_Layout.cshtml
+++ b/src/OurTime.WebUI/Views/Shared/_Layout.cshtml
@@ -63,9 +63,26 @@
     <script src="~/js/cart.js" defer asp-append-version="true"></script>
 
     <script>
-    function showCart() {
-        $('#cartModal').modal('show');
-    }
+        function showCart() {
+            $('#cartModal').modal('show');
+        }
+
+        // Toggle-funktion för information
+        function toggleInfo(id) {
+            const info = document.getElementById(id);
+            const button = document.querySelector(`button[onclick="toggleInfo('${id}')"]`);
+            
+            // Om texten är öppen
+            if (info.style.maxHeight && info.style.maxHeight !== "0px") {
+                info.style.maxHeight = "0px";
+                button.textContent = "More information";
+            } 
+            // Om texten är stängd
+            else {
+                info.style.maxHeight = info.scrollHeight + "px";
+                button.textContent = "Less information";
+            }
+        }
     </script>
 
     @await RenderSectionAsync("Scripts", required: false)
