--- a/src/OurTime.WebUI/wwwroot/css/site.css
+++ b/src/OurTime.WebUI/wwwroot/css/site.css
@@ -3,7 +3,7 @@ body {
   font-family: 'Segoe UI', Arial, sans-serif;
   margin: 0;
   padding: 0;
-  background-image: url('/images/GRÅ1.png');
+  background-image: url('/images/Bakgrundsoft.jpg');
   background-size: cover;
   background-position: top right;
   background-repeat: no-repeat;
@@ -14,7 +14,7 @@ body {
 
 /* Header-styling */
 header {
-  background-color: #353434;
+  background-color: #070000;
   color: white;
   padding: 0.3em 0;
   text-align: center;
@@ -209,3 +209,4 @@ footer {
     box-shadow: none;
   }
 }
+
