--- a/src/OurTime.WebUI/Views/Home/Contact.cshtml
+++ b/src/OurTime.WebUI/Views/Home/Contact.cshtml
@@ -5,5 +5,6 @@
 <div class="section-content">
     <h2>Contact Us</h2>
     <p>If you have any questions or comments, please contact us using the information below:</p>
-    @Html.Partial("_ContactInfo")
+    <partial name="PartialViewName" />
+
 </div>
