--- a/src/OurTime.WebUI/Views/Catalog/Details.cshtml
+++ b/src/OurTime.WebUI/Views/Catalog/Details.cshtml
@@ -36,20 +36,7 @@
     </div>
     <div class="col-md-6">
         <h1 class="mb-3">@Model.Name</h1>
-        <h4 class="text-primary mb-4">@Model.FormattedPrice</h4>
-
-        @if (Model.InStock)
-        {
-            <div class="alert alert-success d-inline-block">
-                <i class="bi bi-check-circle"></i> In Stock (@Model.StockQuantity available)
-            </div>
-        }
-        else
-        {
-            <div class="alert alert-danger d-inline-block">
-                <i class="bi bi-x-circle"></i> Out of Stock
-            </div>
-        }
+        <h4 class="text-primary mb-4">@Model.PriceAmount</h4>
 
         <div class="mt-4">
             <h5>Description</h5>
