SCRUM-68 Fixat partialview, bytt ut en klocka, förstorat bild samt text

--- a/src/OurTime.WebUI/Views/Home/Index.cshtml
+++ b/src/OurTime.WebUI/Views/Home/Index.cshtml
@@ -17,7 +17,8 @@
         <article class="product-card index-product-card">
             <!-- Klickbar bild + titel -->
             <a asp-controller="Home" asp-action="Vector">
-                <img src="@Url.Content("~/images/VectorV1.png")" alt="OT Vector" />
+                <img src="https://storageaccountblobb.blob.core.windows.net/images/VectorV1.png" alt="OT Vector" />
+
                 <h3>OT Vector</h3>
             </a>
             <p>Price: 89,999 SEK</p>
