--- a/src/OurTime.WebUI/Views/Shared/_Layout.cshtml
+++ b/src/OurTime.WebUI/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
 <body>
     <header>
         <div class="logo-container">
-            <img src="/images/OT.jpg" alt="Logotyp för OurTime" />
+            <img src="/images/OT.png.png" alt="Logotyp för OurTime" />
         </div>       
 
         <nav>
