SCRUM-68 ändrat registrera till register

--- a/src/OurTime.WebUI/Views/Shared/_Layout.cshtml
+++ b/src/OurTime.WebUI/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
                 }
                 else
                 {
-                    <li><a asp-controller="Account" asp-action="Register">Registrera</a></li>
+                    <li><a asp-controller="Account" asp-action="Register">Register</a></li>
                     <li><a asp-controller="Account" asp-action="Login">Log in</a></li>
                 }
 
