git commit -m "SCRUM-66 Lägg till Watches API-endpoint samt Review Engine från JIN"

--- a/src/OurTime.WebUI/Views/_ViewImports.cshtml
+++ b/src/OurTime.WebUI/Views/_ViewImports.cshtml
@@ -1,3 +1,6 @@
 ﻿@using OurTime.WebUI
 @using OurTime.WebUI.Models
+@using OurTime.WebUI.Models.Dtos
+@using OurTime.WebUI.Models.Entities
+@using OurTime.WebUI.Models.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
